# test-checker

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  dev.Dockerfile  docker-compose-dev.yaml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
app/: conftest.py
app/alembic/: env.py
app/alembic/versions/: 0b357b347b61_add_student_tests.py  24b379845292_add_student_group_field.py  25b4bc3f2998_initial_migration.py  781f8f7f5f67_correct_questions_mistakes.py  da1ca37e1f14_delete_chat.py
app/auth/: constants.py  exceptions.py  services.py  types.py
app/chat/api/: http_handlers.py  router.py  websocket_handlers.py
app/common/: constants.py  decorators.py  dependencies.py  exceptions.py  handlers.py  models.py  services.py  storage.py  test_factories.py  types.py  utilities.py
app/common/services/: db.py  openai.py  pdf.py
app/core/: celery_app.py  config.py  db.py  main.py
app/student_tests/: exceptions.py  handlers.py  models.py  schemas.py  services.py  tasks.py
app/users/: exceptions.py  handlers.py  models.py  schemas.py  services.py
app/users/api/: __init__.py  http_handlers.py  schemas.py
